--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,9 +23,24 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.navbar {
+  display: flex;
+}
+@media(max-width: 700px){
+
+}
 .map {
   width: 100vw;
   max-width: 100%;
+  min-width: 100%;
   height: 100vh;
   margin: auto;
+}
+
+.cont {
+  min-width: 100%;
+  min-height: 100vh;
+  height: 500px;
+  background-color: tomato;
 }
